# python8

./: text.txt
ex0/: construct.py
ex01/: loading.py  pyproject.toml
ex02/: .env.example  .gitignore  oracle.py
ex1/: loading.py  pyproject.toml
ex2/: oracle.py
