[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Exercise 01 - Loading Programs"
authors = ["ayafshar <aydaafsharrz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "*"
numpy = "*"
requests = "*"
matplotlib = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"